tests/baselines/reference/computedPropertyNamesOnOverloads_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts(4,5): error TS1168: Computed property names are not allowed in method overloads.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts(5,5): error TS1168: Computed property names are not allowed in method overloads.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts (2 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName](v: string);
        ~~~~~~~~~~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
        [methodName]();
        ~~~~~~~~~~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
        [methodName](v?: string) { }
    }